--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <header id="intro-section">
-        <h1 id="main-title"class="intro-part">Jimmy's Dinner</h1>
-        <h3 class="intro-part" id="sub-head">The best burgers and pizzas in town.</h3>
+            <div class="intro-part">
+                <h1 id="main-title">Jimmy's Dinner</h1>
+                <h3 id="sub-head">The best burgers and pizzas in town.</h3>
+            </div>
+        
         </header>
         <main class="content-part">
 
